--- a/appsettings.json
+++ b/appsettings.json
@@ -14,14 +14,13 @@
     "TokenValidityMins": 1
   },
   "ConnectionStrings": {
-    "OramaMAUIConnection": "Server=ASIF\\MSSQLASIF;Database=OramaAPI;Trusted_Connection=True;TrustServerCertificate=True;"
-    //you can use "Server=<your-server-name>;Database=<your-database-name>;Trusted_Connection=True;TrustServerCertificate=True;" for local development and also modify the database name as per your requirement
+    "OramaMAUIConnection": "Server=ASIF\\MSSQLASIF;Database=OramaAPI;Trusted_Connection=True;TrustServerCertificate=True;"   //you can use "Server=<your-server-name>;Database=<your-database-name>;Trusted_Connection=True;TrustServerCertificate=True;" for local development and also modify the database name as per your requirement
   },
   "SmtpSettings": {
     "Server": "smtp.gmail.com",
     "Port": 587,
-    "Username": "14jamesparzival@gmail.com", //add your email here
-    "Password": "behk fxes xykt qlqy", //add your password here
-    "FromEmail": "14jamesparzival@gmail.com" //add your email here
+    "Username": "14jamesparzival@gmail.com",       //add your email here
+    "Password": "",             //add your password here
+    "FromEmail": "14jamesparzival@gmail.com"       //add your email here
   }
 }
